# voice-agent

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  call_telemetry_visual.html  hangup_all.py  main.py  make_call.py  pyproject.toml  restart.sh  run.sh
dashboard/: bus.py  (+3 more)
shuo/: .env.example  .gitignore  ANALYSIS.md  README.md  __init__.py  agent.py  bench.py  call.py  cli.py  context.py  language.py  log.py  main.py  phone.py  pyproject.toml  requirements.txt  speech.py  telemetry.py  tenant.py  tracer.py  translation.py  ttft.py  voice.py  voice_elevenlabs.py  voice_fish.py  voice_kokoro.py  voice_vibevoice.py  web.py
shuo/.claude/: settings.local.json
shuo/docs/: api-plan.md  dashboard-proposal.md  project-description.md  realtime-api-proposal.md
shuo/reports/: bench_summary.md  two_agent_hard_20260404T105623.json  two_agent_hard_20260404T105623.md  two_agent_hard_20260404T105639.json  two_agent_hard_20260404T105639.md  two_agent_hard_20260404T105650.json  two_agent_hard_20260404T105650.md  two_agent_hard_20260404T105659.json  two_agent_hard_20260404T105659.md  two_agent_hard_20260404T105710.json  two_agent_hard_20260404T105710.md  two_agent_hard_20260404T110013.json  two_agent_hard_20260404T110013.md  two_agent_hard_20260404T110029.json  two_agent_hard_20260404T110029.md  two_agent_hard_20260404T110044.json  two_agent_hard_20260404T110044.md  two_agent_hard_20260404T110100.json  two_agent_hard_20260404T110100.md  two_agent_hard_20260404T110114.json  two_agent_hard_20260404T110114.md  two_agent_hard_20260404T110428.json  two_agent_hard_20260404T110428.md  two_agent_hard_20260404T110446.json  two_agent_hard_20260404T110446.md  two_agent_hard_20260404T110503.json  two_agent_hard_20260404T110503.md  two_agent_hard_20260404T110516.json  two_agent_hard_20260404T110516.md  two_agent_hard_20260404T110533.json  two_agent_hard_20260404T110533.md
shuo/scripts/: llm-bench.txt
shuo/shuo/: agent.py  bench.py  cli.py  conversation.py  log.py  phone.py  prompts.py  server.py  speech.py  state.py  tracer.py  types.py  voice_kokoro.py  web.py
shuo/shuo/docs/: project-description.md
shuo/shuo/services/: __init__.py  dtmf.py  flux.py  flux_pool.py  isp.py  llm.py  local_isp.py  player.py  tts.py  tts_elevenlabs.py  tts_fish.py  tts_kokoro.py  tts_pool.py  twilio_client.py  twilio_isp.py
shuo/tests/: conftest.py  test_agent.py  test_bench.py  test_bug_fixes.py  test_cli.py  test_dashboard_auth.py  test_isp.py  test_ivr_barge_in.py  test_regression.py  test_update.py  test_webhook_security.py
(+247 files in other folders)
